advancedpackages/vlc/vlc/libvlc_media_player.inc


function libvlc_audio_output_list_get(p_instance: Plibvlc_instance_t): Plibvlc_audio_output_t; cdecl; external libvlc;
procedure libvlc_audio_output_list_release(p_list: Plibvlc_audio_output_t); cdecl; external libvlc;
function libvlc_audio_output_set(p_mi: Plibvlc_media_player_t; psz_name: pchar): longint; cdecl; external libvlc;
function libvlc_audio_output_device_enum(mp: Plibvlc_media_player_t): Plibvlc_audio_output_device_t; cdecl; external libvlc;
function libvlc_audio_output_device_list_get(p_instance: Plibvlc_instance_t; aout: pchar): Plibvlc_audio_output_device_t; cdecl; external libvlc;
procedure libvlc_audio_output_device_list_release(p_list: Plibvlc_audio_output_device_t); cdecl; external libvlc;
procedure libvlc_audio_output_device_set(mp: Plibvlc_media_player_t; module: pchar; device_id: pchar); cdecl; external libvlc;
function libvlc_audio_output_device_get(mp: Plibvlc_media_player_t): pchar; cdecl; external libvlc;
procedure libvlc_audio_toggle_mute(p_mi: Plibvlc_media_player_t); cdecl; external libvlc;
function libvlc_audio_get_mute(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
procedure libvlc_audio_set_mute(p_mi: Plibvlc_media_player_t; status: longint); cdecl; external libvlc;
function libvlc_audio_get_volume(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
function libvlc_audio_set_volume(p_mi: Plibvlc_media_player_t; i_volume: longint): longint; cdecl; external libvlc;
function libvlc_audio_get_track_count(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
function libvlc_audio_get_track_description(p_mi: Plibvlc_media_player_t): Plibvlc_track_description_t; cdecl; external libvlc;
function libvlc_audio_get_track(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
function libvlc_audio_set_track(p_mi: Plibvlc_media_player_t; i_track: longint): longint; cdecl; external libvlc;
function libvlc_audio_get_channel(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
function libvlc_audio_set_channel(p_mi: Plibvlc_media_player_t; channel: longint): longint; cdecl; external libvlc;
function libvlc_audio_get_delay(p_mi: Plibvlc_media_player_t): Tint64_t; cdecl; external libvlc;
function libvlc_audio_set_delay(p_mi: Plibvlc_media_player_t; i_delay: Tint64_t): longint; cdecl; external libvlc;
function libvlc_audio_equalizer_get_preset_count: dword; cdecl; external libvlc;
function libvlc_audio_equalizer_get_preset_name(u_index: dword): pchar; cdecl; external libvlc;
function libvlc_audio_equalizer_get_band_count: dword; cdecl; external libvlc;
function libvlc_audio_equalizer_get_band_frequency(u_index: dword): single; cdecl; external libvlc;
function libvlc_audio_equalizer_new: Plibvlc_equalizer_t; cdecl; external libvlc;
function libvlc_audio_equalizer_new_from_preset(u_index: dword): Plibvlc_equalizer_t; cdecl; external libvlc;
procedure libvlc_audio_equalizer_release(p_equalizer: Plibvlc_equalizer_t); cdecl; external libvlc;
function libvlc_audio_equalizer_set_preamp(p_equalizer: Plibvlc_equalizer_t; f_preamp: single): longint; cdecl; external libvlc;
function libvlc_audio_equalizer_get_preamp(p_equalizer: Plibvlc_equalizer_t): single; cdecl; external libvlc;
function libvlc_audio_equalizer_set_amp_at_index(p_equalizer: Plibvlc_equalizer_t; f_amp: single; u_band: dword): longint; cdecl; external libvlc;
function libvlc_audio_equalizer_get_amp_at_index(p_equalizer: Plibvlc_equalizer_t; u_band: dword): single; cdecl; external libvlc;
function libvlc_media_player_set_equalizer(p_mi: Plibvlc_media_player_t; p_equalizer: Plibvlc_equalizer_t): longint; cdecl; external libvlc;

type
  Plibvlc_media_player_role = ^Tlibvlc_media_player_role;
  Tlibvlc_media_player_role = longint;

const
  libvlc_role_None = 0;
  libvlc_role_Music = 1;
  libvlc_role_Video = 2;
  libvlc_role_Communication = 3;
  libvlc_role_Game = 4;
  libvlc_role_Notification = 5;
  libvlc_role_Animation = 6;
  libvlc_role_Production = 7;
  libvlc_role_Accessibility = 8;
  libvlc_role_Test = 9;

  libvlc_role_Last = libvlc_role_Test;

type
  Tlibvlc_media_player_role_t = Tlibvlc_media_player_role;
  Plibvlc_media_player_role_t = ^Tlibvlc_media_player_role_t;

function libvlc_media_player_get_role(p_mi: Plibvlc_media_player_t): longint; cdecl; external libvlc;
function libvlc_media_player_set_role(p_mi: Plibvlc_media_player_t; role: dword): longint; cdecl; external libvlc;

// === Konventiert am: 13-10-25 19:24:48 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
